# ai_job_market

./: .gitignore  ARCHITECTURE.md  QUICKSTART_PIPELINE.md  README.md  Roadmap_Analysis.md  main.py  pyproject.toml  requirements-pipeline.txt  run_pipeline.bat  run_pipeline.ps1  run_pipeline.py  run_pipeline.sh
config/: config.yaml  logging.yaml  paths.yaml  pipeline.yaml
docs/: CENTRALIZED_LOADING_CHECKPOINTING.md  MODULARITY_SUMMARY.md  NOTEBOOK_DEPENDENCY_VALIDATION.md  PIPELINE_ORCHESTRATION.md  QUICK_REFERENCE.md
notebooks/: EXPLORATION_GUIDE.md  cleaning.ipynb  exploration.ipynb  salary_intelligence_analysis.ipynb
notebooks/data/dictionary/: location_frequency.csv  skill_frequency.csv  tool_frequency.csv
notebooks/data/enriched/: company_enriched.csv  date_enriched.csv  employment_enriched.csv  experience_enriched.csv  location_enriched.csv  salary_enriched.csv  skills_enriched.csv  tools_enriched.csv
src/analysis/: __init__.py  run_salary_analysis.py  salary_intelligence.py
src/analysis/salary-analysis/: README.md
src/analysis/skills-demand-analysis/: README.md  __init__.py  run_skills_demand_analysis.py  (+1 more)
src/data/: __init__.py  clean_data.py  enrich.py  load_data.py  validate.py
src/utils/: __init__.py  config_loader.py  constant.py  data_cleaner.py  data_merger.py  data_validator.py  enrichers.py  enums.py  file_handler.py  helpers.py  logger.py  notebook_helpers.py
src/visuals/: README.md  run_skills_demand_visualization.py  run_visualizations.py  salary_visualizer.py  skills_demand_visualization.py
v1/: eda-ai-job.ipynb  eda_ai_job.py
